--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>ToDoリスト</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>ToDoリスト</h1>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <title>ToDoリスト</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <img src="/img/logo.svg" alt="OICロゴ" class="logo" />
+      <h1>ToDoリスト</h1>
+    </header>
 
-  <main>
-    <section id="tasks">
-      <h2>やること一覧</h2>
-      <ul>
-        <li>レポートを提出する</li>
-        <li>部屋を片付ける</li>
-        <li>メールを確認する</li>
-      </ul>
-    </section>
-  </main>
+    <main>
+      <section id="tasks">
+        <h2>やること一覧</h2>
+        <ul>
+          <li>レポートを提出する</li>
+          <li>部屋を片付ける</li>
+          <li>メールを確認する</li>
+        </ul>
+      </section>
+    </main>
 
-  <footer>
-    <p>© 2025 ToDo Inc.</p>
-  </footer>
-</body>
+    <footer>
+      <p>© 2025 ToDo Inc.</p>
+    </footer>
+  </body>
 </html>
