締め切り表示設定

--- a/index.html
+++ b/index.html
@@ -14,11 +14,24 @@
     <main>
       <section id="tasks">
         <h2>やること一覧</h2>
-        <ul>
-          <li>レポートを提出する</li>
-          <li>部屋を片付ける</li>
-          <li>メールを確認する</li>
-        </ul>
+        <table>
+          <tr>
+            <th>タスク</th>
+            <th>期限</th>
+          </tr>
+          <tr>
+            <th class="task">レポートを提出する</th>
+            <th class="due-date">2025年5月1日</th>
+          </tr>
+          <tr>
+            <th class="task">部屋を片付ける</th>
+            <th class="due-date">2025年5月1日</th>
+          </tr>
+          <tr>
+            <th class="task">メールを確認する</th>
+            <th class="due-date">2025年5月1日</th>
+          </tr>
+        </table>
       </section>
     </main>
 
