--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ToDoリスト</title>
+  <title>ToDo List</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>ToDoリスト</h1>
+    <h1>ToDo List</h1>
   </header>
 
   <main>
     <section id="tasks">
-      <h2>やること一覧</h2>
+      <h2>Pending Tasks</h2>
       <ul>
-        <li>レポートを提出する</li>
-        <li>部屋を片付ける</li>
-        <li>メールを確認する</li>
+        <li>Submit report</li>
+        <li>Clean up room</li>
+        <li>Check emails</li>
       </ul>
     </section>
   </main>
