ほしで評価

--- a/index.html
+++ b/index.html
@@ -13,11 +13,28 @@
   <main>
     <section id="tasks">
       <h2>Pending Tasks</h2>
-      <ul>
-        <li>Submit report</li>
-        <li>Clean up room</li>
-        <li>Check emails</li>
-      </ul>
+      <table>
+        <thead>
+          <tr>
+            <th>Task</th>
+            <th>Importance</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Submit report</td>
+            <td>★★★</td>
+          </tr>
+          <tr>
+            <td>Clean up room</td>
+            <td>★☆☆</td>
+          </tr>
+          <tr>
+            <td>Check emails</td>
+            <td>★★☆</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
   </main>
 
