表タイトル挿入忘れ修正

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <table>
           <tr>
             <th>Task</th>
+            <th>Importance</th>
             <th>Due Date</th>
           </tr>
           <tr>
